RESOLVED FIXED86836
[EFL] Text input events are emitted for nodes that do not allow editing.
https://bugs.webkit.org/show_bug.cgi?id=86836
Summary [EFL] Text input events are emitted for nodes that do not allow editing.
Mikhail Pozdnyakov
Reported 2012-05-18 03:12:27 PDT
Text input events are emitted for nodes that do not allow editing.
Attachments
Fix. (1.52 KB, patch)
2012-05-18 03:40 PDT, Mikhail Pozdnyakov
no flags
patch v2 (added more info to changelog) (1.70 KB, patch)
2012-05-18 05:59 PDT, Mikhail Pozdnyakov
no flags
Mikhail Pozdnyakov
Comment 1 2012-05-18 03:40:43 PDT
Gyuyoung Kim
Comment 2 2012-05-18 03:58:41 PDT
Comment on attachment 142679 [details] Fix. Looks good to me.
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-05-18 05:50:51 PDT
Do we have a test for this?
Mikhail Pozdnyakov
Comment 4 2012-05-18 05:51:53 PDT
(In reply to comment #3) > Do we have a test for this? fast/events/key-events-in-input-button.html
Raphael Kubo da Costa (:rakuco)
Comment 5 2012-05-18 05:53:15 PDT
Can you please mention that in the ChangeLog?
Mikhail Pozdnyakov
Comment 6 2012-05-18 05:59:42 PDT
Created attachment 142697 [details] patch v2 (added more info to changelog)
Mikhail Pozdnyakov
Comment 7 2012-05-18 06:00:07 PDT
(In reply to comment #5) > Can you please mention that in the ChangeLog? sure
Raphael Kubo da Costa (:rakuco)
Comment 8 2012-05-18 06:00:32 PDT
Comment on attachment 142697 [details] patch v2 (added more info to changelog) Looks good, thank you.
WebKit Review Bot
Comment 9 2012-05-18 06:54:21 PDT
Comment on attachment 142697 [details] patch v2 (added more info to changelog) Clearing flags on attachment: 142697 Committed r117584: <http://trac.webkit.org/changeset/117584>
WebKit Review Bot
Comment 10 2012-05-18 06:54:27 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.