[EFL] Text input events are emitted for nodes that do not allow editing. https://bugs.webkit.org/show_bug.cgi?id=86836

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-05-18
Reviewed by Kenneth Rohde Christiansen.

Text input events are not anymore emitted for nodes that do not allow editing.
This can be checked with fast/events/key-events-in-input-button.html test output.

* WebCoreSupport/EditorClientEfl.cpp:
(WebCore::EditorClientEfl::handleEditingKeyboardEvent): Returns false if the node cannot edit.

Canonical link: https://commits.webkit.org/104484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117584 268f45cc-cd09-0410-ab3c-d52691b4dbfc